# dpitt.me

./: #Site.hs#  .gitignore  .gitmodules  LICENSE  Readme.org  Site.hs  _config.yml  about.html  about.md  archive.html  cfg.dhall  cv.md  cv.md~  dan-pittman.key  dev-note.md  dpitt.cabal  ephemera.html  feed.xml  index.html  keybase.txt  newsletter.html  package.yaml  readme.md  reads.html  sign.sh  stack.yaml  tags.html  talks.html  weeklies.html  weeklys.html
_drafts/: 2017-04-24-2017-hott-desiderata.md  2017-04-24-2017-learning-hott.md  2017-07-17-product-types-and-stuff.md  hauntology-fp.md  linear-dependent.md  linear-language-games.md  propositional-reals.md
_includes/: head.html  math.html  stats.html
_layouts/: cv.html  default.html  post.html  talk.html
_site/: index.html
_site/about/: index.html
_site/archive/: index.html
_site/css/: overrides.css  pandoc.css
_site/cv/: index.html
_talks/: pt-impression.md
about/: cv.md
blog/: 2017-05-23-hott-desiderata.md  2018-02-15-profunctors.md  2018-06-04-why-fp.md  2019-03-04-linear-language-games.md  2019-04-17-haskell-error-handling.org  2020-03-25-zettelkasten.org  2020-07-01-hott-reals.org  2021-03-27-equality-philosophy.org
css/: main.css  overrides.css  solarized.css  style.css
cv/: index.html
ephemera/: 2018-02-19-a-week-again.md  2019-03-17-vitamin-d.md  2019-03-17-vitamin-d.org  2019-05-28-ecm.org  2019-09-16-deleuze.org
forest/: dsp-0001.md  dsp-0002.md  dsp-0003.md  dsp-0004.md  dsp-0005.md  dsp-0006.md  dsp-0007.md  dsp-0008.md  dsp-0009.md  dsp-0010.md  dsp-0011.md  dsp-0012.md  dsp-0013.md  dsp-0014.md  dsp-0015.md  dsp-0016.md  dsp-0017.md  dsp-0018.md  dsp-0019.md  dsp-0020.md  dsp-0021.md  dsp-0022.md  dsp-0023.md  dsp-0024.md  dsp-0025.md  dsp-0026.md  dsp-0027.md  dsp-0028.md  dsp-0029.md  dsp-0030.md  dsp-0031.md  dsp-0032.md  dsp-0033.md  dsp-0034.md  dsp-0035.md  dsp-0H0E.md  dsp-0Y6J.md  dsp-2B0B.md  dsp-2O6M.md  dsp-2P7F.md  (+21 more)
js/: analytics.js  xypic.js
newsletter/: 2020-07.md  2020-08.md  2020-08.org
posts/: 2018-02-15-profunctors.md
reads/: speak.org
resume/: index.html
talks/: 2018-09-30-pt-impression.org  2019-10-19-tt-for-rust.org  pt-impression.md  pt-impression.org  tt-for-rust.org
templates/: base.html  cv.html  default.html  footer.html  header.html  math.html  post-list.html  post.html  tags.html  talks.html  wide.html
(+54 files in other folders)
