name:                dpitt
version:             0.1.0.0
homepage:            https://github.com/pittma/dpitt.me
license:             MIT
--license-file:        LICENSE
author:              dan pittman
maintainer:          dan@dpitt.me
copyright:           2018 Dan Pittman
category:            Web
build-type:          Simple
--extra-source-files:  readme.org
cabal-version:       >=1.10

executable dpitt
  main-is:             Site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       pandoc-sidenote,
                       filepath,
                       split
