cabal-version:      2.4
name:               dpitt
version:            0.1.0.0

author:             Dan Pittman
maintainer:         dan@dpitt.me

executable dpitt
    main-is:          Main.hs
    other-modules:    Site
    build-depends:    base ^>=4.18.3.0,
                      dhall,
                      directory,
                      filepath,
                      hakyll,
                      optparse-applicative,
                      pandoc,
                      pandoc-sidenote,
                      pandoc-types,
                      process,
                      random,
                      sort,
                      text,
                      time
    ghc-options:      -Wall -threaded
    hs-source-dirs:   bin
    default-language: Haskell2010
